# CAESAR

./: .gitignore  CAESARConfig.cmake.in  CAESAR_compressor.py  CAESAR_decompressor.py  CAESAR_hyper_decompressor.py  CMakeLists.txt  NVCOMP_LBRC_NEXT_STEPS.txt  README.md  download_models.ps1  download_models.sh  make_lbrc_nvcomp_batched.py  make_lbrc_nvcomp_lz4.py  make_lbrc_nvcomp_zstd_batched.py  plot_gae_over_lbrc_nvcomp_speedup.py  plot_gae_raw_vs_lbrc_nvcomp_zstd.py  plot_gae_summary_cr_vs_lbrc_nvcomp.py  plot_gae_vs_lbrc_nvcomp_gbps.py  plot_gae_vs_lbrc_nvcomp_gbps_real_nrmse.py  plot_gae_vs_lbrc_nvcomp_gbps_real_nrmse_filtered.py  plot_gbytes_per_sec_gae_lbrc_nvcomp.py  plot_lbrc_cpp_vs_python_all_eb.py  plot_lbrc_cpp_vs_python_all_eb_visible.py  plot_lbrc_cpp_vs_python_offset.py  run_gae_raw_and_compare_lbrc_nvcomp.sh  run_lbrc_cpp_all_compare.sh  run_lbrc_cpp_all_eb_sweep.sh  run_lbrc_cpp_validation.sh
.github/workflows/: cross-platform-test.yml
CAESAR/: CAESAR.cpp  CMakeLists.txt  data_utils.cpp  data_utils.h
CAESAR/dataset/: dataset.cpp  dataset.h
CAESAR/models/: array_utils.h  caesar_compress.cpp  caesar_compress.h  caesar_decompress.cpp  caesar_decompress.h  gaeFusedKernels.cu.exp7_before_gpu_unpack  gaeFusedKernels.h.exp7_before_gpu_unpack  lbrc.cpp  lbrc.h  lbrc_nvcomp.cpp  lbrc_nvcomp.h  lbrc_nvcomp_batched.cpp  lbrc_nvcomp_batched.h  lbrc_nvcomp_zstd_batched.cpp  lbrc_nvcomp_zstd_batched.h  model_cache.h  model_utils.cpp  model_utils.h  runGaeCuda.cpp  runGaeCuda.cpp.exp11_before_index_add  runGaeCuda.cpp.exp8_before_decompress_profile  runGaeCuda.cpp.exp9_before_single_batch_decompress  runGaeCuda.cpp.exp9_single_batch_decompress_good  runGaeCuda.cpp.test_before_disable_direct_payload  runGaeCuda.cpp.test_before_force_cpu_zstd  runGaeCuda.h
CAESAR/tools/: caesar_gae_bench.cpp  caesar_lbrc.cpp  caesar_lbrc_nvcomp.cpp  caesar_lbrc_nvcomp_batched.cpp  caesar_lbrc_nvcomp_zstd_batched.cpp  runGAE.cpp
CPU/: README.md  cpu_build.patch
GPU/: gpu.patch
tests/: CMakeLists.txt  testLBRC.cpp  test_caesarCD.cpp  test_padding.cpp
